fix vertical alignment to middle, make lower transparency of 'prev', 'next' icons

--- a/css/style.css
+++ b/css/style.css
@@ -78,12 +78,12 @@ img {
   color: #ffc;
   text-align: center;
   font-size: 60px;
-  opacity: 0.5;
-  filter: alpha(opacity=50);
-  -webkit-transition: opacity .5s;
-  -moz-transition: opacity .5s;
-  -o-transition: opacity .5s;
-  transition: opacity .5s;
+  opacity: 0.9;
+  filter: alpha(opacity=90);
+  -webkit-transition: opacity .9s;
+  -moz-transition: opacity .9s;
+  -o-transition: opacity .9s;
+  transition: opacity .9s;
 }
 #prevLink {
   left: 0;
